--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -17,15 +17,15 @@ jobs:
       # Pull Source Code
       -
         name: Checkout
-        uses: actions/checkout@v2
+        uses: actions/checkout@v4
 
       - name: Set env
         run: echo "RELEASE_VERSION=${GITHUB_REF#refs/*/}" >> $GITHUB_ENV
 
       # Use nodejs
-      - uses: actions/setup-node@v1
+      - uses: actions/setup-node@v3
         with:
-          node-version: '16.x'
+          node-version: '20.x'
 
       # Install npm packages
       - run: npm install
@@ -36,7 +36,8 @@ jobs:
       - run: sed -i -e 's/REL_VER_NUMBER/${{ env.RELEASE_VERSION }}/g' src/plugin.css
 
       # dist setup
-      - run: rm -rf dist/.git* # delete .git* files in dist
+      - run: |
+          [ ! -d ./dist ] && mkdir ./dist || echo 'dist dir already exists!'
       - run: echo ARCHIVE="docsify-plugin-footer-${{ env.RELEASE_VERSION }}.zip" >> $GITHUB_ENV
       - run: mv LICENSE LICENSE.txt
 
@@ -45,7 +46,7 @@ jobs:
 
       # Publish to npm
       - name: "🚀 Publish to npm"
-        uses: JS-DevTools/npm-publish@v1
+        uses: JS-DevTools/npm-publish@v2
         with:
           token: ${{ secrets.NPM_TOKEN }}
           access: "public"
@@ -53,7 +54,7 @@ jobs:
 
       # Publish to github npm
       - name: "🚀 Publish to github npm"
-        uses: JS-DevTools/npm-publish@v1
+        uses: JS-DevTools/npm-publish@v2
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
           access: "public"
